v3.10.4 (XXXX-XX-XX)
--------------------

* Activate RDB_CoveringIterator and use it for some geo index queries.
  This speeds up and simplifies geo queries with geo index which do not use
  GEO_DISTANCE.


v3.10.3 (2023-01-23)
--------------------

* Log information about follower state/apply progress in supervision job that
  organizes failover in active failover mode.

* Updated arangosync to v2.14.0.

* Updated ArangoDB Starter to 0.15.6.

* Fix bug in hotbackup download/restore to make sure no data is mixed up between
  servers. This fixes a bug introduced in 3.10. Note that previous 3.10 versions
  may not correctly restore a hotbackup which was uploaded from one cluster and
  downloaded into another.

* ES-1396: under some rare circumstances it was possible that background index
  creation missed some documents in case the documents were inserted after
  background index creation started and the corresponding WAL files with the
  inserts were already removed before background indexing caught up.

* Web UI [FE-48]: Additional fix to the previously introduced license
  information usability improvement. In case the server is being started with
  the additional parameter `--server.harden`, the previous fix did not handle
  that specific edge case.

* BTS-413: Added more explanatory messages for when the user cannot see the
  statistics for a node in the UI when in cluster mode.

* Fix coordinator segfault in AQL queries in which the query is invoked from
  within a JavaScript context (e.g. from Foxx or from the server's console mode)
  **and** the query has multiple coordinator snippets of which except the
  outermost one invokes a JavaScript function.
  Instead of crashing, coordinators will now respond with the exception "no v8
  context available to enter for current transaction context".
  For AQL queries that called one of the AQL functions `CALL` or `APPLY` with a
  fixed function name, e.g. `APPLY('CONCAT', ...)`, it is now also assumed