@@ -78,22 +78,35 @@ class V8DealerFeature final : public ArangodFeature {
   std::string _startupDirectory;
   std::string _nodeModulesDirectory;
   std::vector<std::string> _moduleDirectories;
+  // maximum number of contexts to create
+  uint64_t _nrMaxContexts;
+  // minimum number of contexts to keep
+  uint64_t _nrMinContexts;
+  // number of contexts currently in creation
+  uint64_t _nrInflightContexts;
+  // maximum number of V8 context invocations
+  uint64_t _maxContextInvocations;
+
+  // copy JavaScript files into database directory on startup
   bool _copyInstallation;
-  uint64_t _nrMaxContexts;          // maximum number of contexts to create
-  uint64_t _nrMinContexts;          // minimum number of contexts to keep
-  uint64_t _nrInflightContexts;     // number of contexts currently in creation
-  uint64_t _maxContextInvocations;  // maximum number of V8 context invocations
+  // enable /_admin/execute API
   bool _allowAdminExecute;
+  // allow JavaScript transactions?
   bool _allowJavaScriptTransactions;
+  // allow JavaScript user-defined functions?
+  bool _allowJavaScriptUdfs;
+  // allow JavaScript tasks (tasks module)?
   bool _allowJavaScriptTasks;
+  // enable JavaScript globally
   bool _enableJS;
 
  public:
-  bool allowAdminExecute() const { return _allowAdminExecute; }
-  bool allowJavaScriptTransactions() const {
+  bool allowAdminExecute() const noexcept { return _allowAdminExecute; }
+  bool allowJavaScriptTransactions() const noexcept {
     return _allowJavaScriptTransactions;
   }
-  bool allowJavaScriptTasks() const { return _allowJavaScriptTasks; }
+  bool allowJavaScriptUdfs() const noexcept { return _allowJavaScriptUdfs; }
+  bool allowJavaScriptTasks() const noexcept { return _allowJavaScriptTasks; }
 
   bool addGlobalContextMethod(std::string const&);
   void collectGarbage();
